# todo-cli

./: pyproject.toml
src/todo_cli/: add.py  clear.py  delete.py  list.py  main.py  mark.py  saving.py  status.py  update.py
